--- a/travel_activity/trips/templates/base.html
+++ b/travel_activity/trips/templates/base.html
@@ -14,16 +14,10 @@
       </div>
       <ul class="nav-links">
         <li><a href="{% url 'home' %}">Home</a></li>
-        <li><a href="{% url 'saved' %}">Saved</a></li>
+        <li><a href="{% url 'saved' %}">Trips</a></li>
         <li><a href="/search/">Search</a></li>
         {% if user.is_authenticated %}
           <li><a href="{% url 'profile' %}">Profile</a></li>
-          <li>
-            <form method="POST" action="{% url 'logout' %}">
-              {% csrf_token %}
-              <button type="submit" class="logout-btn">Logout</button>
-            </form>
-          </li>
         {% else %}
           <li><a href="{% url 'login' %}">Login</a></li>
         {% endif %}
